force-app/main/default/objects/clofor_com_cfs__CashAdvance__c/fields/clofor_com_cfs__AmountPaidAdvanceCash__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountPaidAdvanceCash__c</fullName>
    <label>Amount Paid for Advance Cash</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>