force-app/main/default/objects/clofor_com_cfs__CashAdvance__c/fields/clofor_com_cfs__AmountPaidAdvanceCashFCY__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountPaidAdvanceCashFCY__c</fullName>
    <label>Amount Paid for Advance Cash(FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>