force-app/main/default/objects/clofor_com_cfs__CashAdvance__c/fields/clofor_com_cfs__BalAdvanceCash__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BalAdvanceCash__c</fullName>
    <formula>clofor_com_cfs__LimitAdvanceCash__c 
-
 clofor_com_cfs__AmountPaidAdvanceCash__c</formula>
    <label>Balance of Advance Cash</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>