force-app/main/default/objects/clofor_com_cfs__CashAdvance__c/fields/clofor_com_cfs__BalAdvanceCashFCY__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BalAdvanceCashFCY__c</fullName>
    <formula>clofor_com_cfs__LimitAdvanceCashFCY__c
-
clofor_com_cfs__AmountPaidAdvanceCashFCY__c</formula>
    <label>Balance of Advance Cash(FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>