force-app/main/default/objects/clofor_com_cfs__CashAdvance__c/fields/clofor_com_cfs__EmployeeCode__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__EmployeeCode__c</fullName>
    <label>Employee Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>