force-app/main/default/objects/clofor_com_cfs__CashAdvance__c/fields/clofor_com_cfs__EmployeeName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__EmployeeName__c</fullName>
    <label>Employee Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>