force-app/main/default/objects/clofor_com_cfs__CashAdvance__c/fields/clofor_com_cfs__ExternalRequester__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ExternalRequester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>External Requester</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>CashAdvance</relationshipName>
    <type>Lookup</type>
</CustomField>