force-app/main/default/objects/clofor_com_cfs__CashAdvance__c/fields/clofor_com_cfs__LiquidationTargetDays__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LiquidationTargetDays__c</fullName>
    <label>Liquidation Target Days after Paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>