force-app/main/default/objects/clofor_com_cfs__CashAdvance__c/fields/clofor_com_cfs__RollupAmountAdvancedPaidFCY__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RollupAmountAdvancedPaidFCY__c</fullName>
    <label>Rollup Amount Advance Payment(FCY)</label>
    <summarizedField>clofor_com_cfs__TrxPlanCashAdvance__c.clofor_com_cfs__AmountAdvancedPaidFCYCA__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__TrxPlanCashAdvance__c.clofor_com_cfs__CashAdvanceID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>