force-app/main/default/objects/clofor_com_cfs__CashAdvance__c/fields/clofor_com_cfs__RollupAmountAdvancedPaidLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RollupAmountAdvancedPaidLocal__c</fullName>
    <label>ROLLUP AMOUNT ADVANCE PAYMENT(LOCAL)</label>
    <summarizedField>clofor_com_cfs__TrxPlanCashAdvance__c.clofor_com_cfs__AmountAdvancedPaidLocalCA__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__TrxPlanCashAdvance__c.clofor_com_cfs__CashAdvanceID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>