force-app/main/default/objects/clofor_com_cfs__CashAdvance__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__EmployeeCode__c</columns>
    <columns>clofor_com_cfs__EmployeeName__c</columns>
    <columns>clofor_com_cfs__InternalRequester__c</columns>
    <columns>clofor_com_cfs__ExternalRequester__c</columns>
    <columns>clofor_com_cfs__LimitAdvanceCash__c</columns>
    <columns>clofor_com_cfs__AmountPaidAdvanceCash__c</columns>
    <columns>clofor_com_cfs__LiquidationTargetMaxNoDays__c</columns>
    <columns>clofor_com_cfs__MaxNoOfDaysAfterCreated__c</columns>
    <columns>clofor_com_cfs__BalAdvanceCash__c</columns>
    <columns>clofor_com_cfs__ExpireDateAdvanceCash__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>